# fangorn-django-ariadne-vue

./: .gitignore  devserver.sh  links.txt  pyproject.toml
core/: graphql_config.py  resolvers.py  schema.graphql  settings.py  urls.py
customers/: admin.py  models.py  resolvers.py  schema.graphql
customers/management/commands/: seed_customers.py
customers/migrations/: 0001_initial.py  0002_customertype_customer_type.py  0003_salutation_remove_customer_type_customer_address_and_more.py  0004_customer_created_customer_modified_customer_notes.py  0005_customer_customer_number_customer_email_and_more.py
